src/test/ui/conditional-compilation/cfg-attr-multi-invalid-2.stderr
error[E0658]: no_core is experimental (see issue #29639)
  --> $DIR/cfg-attr-multi-invalid-2.rs:4:29
   |
LL | #![cfg_attr(broken, no_std, no_core)]
   |                             ^^^^^^^
   |
   = help: add #![feature(no_core)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
